--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
         <div class="home">
   <div class="content">
     <div class="profile">
-      <h1 class="nickname">AmyZeng</h1>
+      <h1 class="nickname">AcapellaAmores</h1>
       <div class="description">
-        <p><p>Hi there, my name is AmyZeng from DongGuan of China. You can call me “A”, sounded like “欸” in Chinese. Because of my study &amp; work experience, I’m the person who was interested in ART、DESIGN、CODING、JAZZ HIPHOP MUSIC etc. Welcome to my Blog.</p>
+        <p><p>I'm advocating a sort of Moderate Hedonism. Work and self-actualisation  can be rewarding and meaningful, but looking at the sea from a hammock  and drinking too much beer with friends three times a week is also a  completely respectable way of waiting for the gravitational swallowing  of the planet.</p>
 </p>
       </div>
     </div>
@@ -48,7 +48,7 @@
       
         <li>
 	  
-	    <a href="http://i.ui.cn/ucenter/323516.html">作品</a>
+	    <a href="http://i.ui.cn/ucenter/323516.html">玩玩</a>
 	  
         </li>
       
