--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       
   <footer id="footer" class="home-footer footer">
     <div id="copyright" class="copyright">
-      &copy; 2018  Powered by <span>来至宇宙的淘金少女</span>
+      &copy; 2022  Powered by <span>把有限的生命浪费在无限的浅尝辄止上</span>
 
       </div>
     </footer>
