--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <title>AmyZeng</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta property="og:type" content="website">
-<meta property="og:title" content="AmyZeng">
+<meta property="og:title" content="AA">
 <meta property="og:url" content="http://yoursite.com/index.html">
-<meta property="og:site_name" content="AmyZeng">
+<meta property="og:site_name" content="AA">
 <meta name="twitter:card" content="summary">
-<meta name="twitter:title" content="AmyZeng">
+<meta name="twitter:title" content="AA">
   
   
     <link rel="icon" href="/favicon.ico">
